Fixed an overflow issue with the navigation bar on larger screens

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,6 @@ body {
         text-align: center;
         z-index: 100;
         background: #CFCFBA;
-        overflow-y: scroll;
         margin: 0;
         border-right: 1px solid black;
     }
@@ -144,7 +143,7 @@ body {
 
     #nav-links {
         height: 100%;
-        width: 101%;
+        width: 100%;
         background: #CFCFBA;
         overflow: auto;
         margin: 0 auto;
